fixed vars not exported

--- a/roles/zaloha/templates/backup.conf.j2
+++ b/roles/zaloha/templates/backup.conf.j2
@@ -1,4 +1,5 @@
 # Proxmox backup config file
 
-PBS_REPOSITORY={{ backup_server_ip }}:{{ backup_datastore }}
+PBS_REPOSITORY={{ backup_server_repo }}:{{ backup_datastore }}
+
 PBS_PASSWORD={{ PBS_PASSWORD }}
