included mount point for a specific reason

--- a/roles/zaloha/templates/zaloha.sh.j2
+++ b/roles/zaloha/templates/zaloha.sh.j2
@@ -9,4 +9,4 @@ source {{ backup_vars_dest }}
 export PBS_PASSWORD
 export PBS_REPOSITORY
 
-/usr/local/sbin/proxmox-backup-client backup {{ backup_name_path }}
+/usr/local/sbin/proxmox-backup-client backup {{ backup_name_path }} --include-dev /srv/docker
